MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__Allow_Salesforce_Save__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Allow_Salesforce_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Salesforce Save</label>
    <type>Checkbox</type>
</CustomField>