MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__BB_Enrichment_Status__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BB_Enrichment_Status__c</fullName>
    <label>BB Enrichment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>