MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__BuzzBoard_Audit_Link__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BuzzBoard_Audit_Link__c</fullName>
    <label>BuzzBoard Profile Link</label>
    <type>Url</type>
</CustomField>