MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__BuzzBoard_Category_One__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BuzzBoard_Category_One__c</fullName>
    <label>SMBSmart Category One</label>
    <length>200</length>
    <type>Text</type>
</CustomField>