MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__BuzzBoard_Category_Two__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BuzzBoard_Category_Two__c</fullName>
    <label>SMBSmart Category Two</label>
    <length>200</length>
    <type>Text</type>
</CustomField>