MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__BuzzBoard_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BuzzBoard_Sync_Status__c</fullName>
    <label>BuzzBoard Sync Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>