MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__BuzzRank__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BuzzRank__c</fullName>
    <label>BuzzScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>