MyDemoOrg/force-app/main/default/objects/Lead/fields/BBCRM__ListingUpdate__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__ListingUpdate__c</fullName>
    <label>ListingUpdate</label>
    <length>25</length>
    <type>Text</type>
</CustomField>