MyDemoOrg/force-app/main/default/objects/Lead/recordTypes/ISV_Partner_Lead.recordType-meta.xml
<RecordType>
    <fullName>ISV_Partner_Lead</fullName>
    <active>true</active>
    <businessProcess>ISV Partner Lead</businessProcess>
    <label>ISV Partner Lead</label>
</RecordType>