MyDemoOrg/force-app/main/default/objects/Lead/recordTypes/ISV_Referral.recordType-meta.xml
<RecordType>
    <fullName>ISV_Referral</fullName>
    <active>true</active>
    <businessProcess>Lead Single Process</businessProcess>
    <label>ISV Referral</label>
</RecordType>