MyDemoOrg/force-app/main/default/objects/Lead/listViews/BBCRM__Not_Synced_to_BuzzBoard_Leads.listView-meta.xml
<ListView>
    <fullName>BBCRM__Not_Synced_to_BuzzBoard_Leads</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>LEAD.COMPANY</columns>
    <columns>BBCRM__BuzzBoard_Sync_Status__c</columns>
    <columns>BBCRM__BuzzRank__c</columns>
    <columns>BBCRM__Error_Description__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>BBCRM__BuzzBoard_Sync_Status__c</field>
        <operation>notEqual</operation>
        <value>Synced</value>
    </filters>
    <filters>
        <field>BBCRM__BuzzRank__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>BBCRM__BuzzBoard_Audit_Link__c</field>
        <operation>equals</operation>
    </filters>
    <label>Not Synced to BuzzBoard Leads</label>
    <language>en_US</language>
</ListView>